--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,7 +275,7 @@ main {
 /* End section 2 */
 /* Start section 3 */
 #contact {
-    background-image: url("assets/images/contact.jpg");
+    background-image: url("https://s6.uupload.ir/files/contact_6283.jpg");
     background-size: cover;
     min-height: 66rem;
 }
